2007-10-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c (create_image): check that the
	window shape is non-empty before applying it to the alpha channel.

2007-10-05  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c (cdisplay_lcms_get_display_profile):
	support the new revision of the ICC Profiles In X specification
	which handles Xinerama setups.

2007-10-05  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: use the same size for all
	color buttons.

2007-10-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/perspective-shadow.scm: applied patch
	from Ulf-D. Ehlert with usability improvements (bug #482743).

2007-10-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mblur.c: restore compatibility by registering an
	extra procedure for the inward/outward parameter (bug #483426).

2007-10-05  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: allow to configure the
	out-of-gamut warning color.

2007-10-05  Sven Neumann  <sven@gimp.org>

	* modules/colorsel_cmyk_lcms.c: always use the configured CMYK
	profile, regardless of the color management mode.

2007-10-05  Sven Neumann  <sven@gimp.org>

	* app/plug-in/plug-in-menu-path.c (plug_in_menu_path_map):
	rewritten array handling to make the IRIX MIPSpro compiler happy
	(bug #483619).

2007-10-05  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpcolorconfig.[ch]: added settings for marking
	out-of-gamut colors in the Print Simulation (bug #476824).

	* app/dialogs/preferences-dialog.c: added a check-button for the
	out-of-gamut warning and tweaked the layout of the Color Management
	page to make the relationship of the settings more obvious.

	* modules/cdisplay_lcms.c: mark out-of-gamut colors.

2007-10-04  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c
	* modules/cdisplay_proof.c
	* modules/colorsel_cmyk_lcms.c
	* plug-ins/common/lcms.c 
	* plug-ins/jpeg/jpeg-load.c: use cmsFLAGS_BLACKPOINTCOMPENSATION